--- a/contacto.html
+++ b/contacto.html
@@ -134,7 +134,7 @@
               <li>
                 <!-- Facebook -->
                 <a href="#face"
-                  ><i class="fa-brands fa-facebook" id="facebook"></i> Gymlovers
+                  ><i class="fa-brands fa-facebook" id="facebook"></i> PowerLift
                   CR</a
                 >
               </li>
@@ -143,7 +143,7 @@
                 <!-- Instagram -->
                 <a href="#inst"
                   ><i class="fa-brands fa-instagram" id="insta"></i>
-                  gym_lovers</a
+                  power_lift</a
                 >
               </li>
 
@@ -151,7 +151,7 @@
                 <!-- Correo -->
                 <a href="#corr"
                   ><i class="fa-solid fa-envelope" id="correo"></i>
-                  gym_lovers@gmail.com</a
+                  powerlift@gmail.com</a
                 >
               </li>
             </ul>
