--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -112,7 +112,7 @@
 
       <!-- Logo de la tienda virtual-->
       <div class="logo-posicion">
-        <a href="/"
+        <a href="index.html"
           ><img src="logo.png" alt="Logo power lift" class="logo"
         /></a>
       </div>
