--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,8 @@
     <link rel="shortcut icon" href="icon-pl.png" type="image/x-icon">
     
     <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="fontawesome-free-6.3.0-web/css/all.min.css" />
+<!--     <link rel="stylesheet" href="fontawesome-free-6.3.0-web/css/all.min.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-lOIOzJivOpvt/jdcU6I2j6iMKC6lqIZpOXIilKjy04L6wWJSCmoHuPHgGB+1NSZ2vl6DRm9XUqEbsKjIe+LL+A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="contenedor-Principal">
