--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
               </li>
       
               <li>
-                <i class="fas fa-phone-alt"></i>
+                <i class="fas fa-phone"></i>
                 <a href="contacto.html">Contáctenos</a>
               </li>
             </ul>
@@ -135,7 +135,7 @@
               <li>
                 <!-- Facebook -->
                 <a href="#face"
-                  ><i class="fa-brands fa-facebook" id="facebook"></i> PowerLift
+                  ><i class="fab fa-facebook" id="facebook"></i> PowerLift
                   CR</a
                 >
               </li>
